--- a/charts/dependency-track/templates/service-frontend.yaml
+++ b/charts/dependency-track/templates/service-frontend.yaml
@@ -1,16 +1,17 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ template "dependency-track.fullname" . }}
+  name: {{ template "dependency-track.fullname" . }}-frontend
   labels:
 {{ include "dependency-track.labels" . | indent 4 }}
 spec:
-  type: {{ .Values.service.type }}
+  type: {{ .Values.frontend.service.type }}
   ports:
-    - port: {{ .Values.service.port }}
+    - port: {{ .Values.frontend.service.port }}
       targetPort: http
       protocol: TCP
       name: http
   selector:
     app: {{ template "dependency-track.name" . }}
+    type: frontend
     release: {{ .Release.Name }}
