--- a/charts/dependency-track/values.yaml
+++ b/charts/dependency-track/values.yaml
@@ -102,6 +102,13 @@ backend:
     # ALPINE_OIDC_TEAMS_CLAIM: groups
     # ALPINE_OIDC_USER_PROVISIONING: true
     # ALPINE_OIDC_TEAM_SYNCHRONIZATION: true
+    ALPINE_CORS_ENABLED: true
+    ALPINE_CORS_ALLOW_ORIGIN: *
+    ALPINE_CORS_ALLOW_METHODS: GET, POST, PUT, DELETE, OPTIONS
+    ALPINE_CORS_ALLOW_HEADERS: Origin, Content-Type, Authorization, X-Requested-With, Content-Length, Accept, Origin, X-Api-Key, X-Total-Count, *
+    ALPINE_CORS_EXPOSE_HEADERS: Origin, Content-Type, Authorization, X-Requested-With, Content-Length, Accept, Origin, X-Api-Key, X-Total-Count
+    ALPINE_CORS_ALLOW_CREDENTIALS: true
+    ALPINE_CORS_MAX_AGE: 3600
 
   # secretsEnv:
   # This allows to specify a list of secrets/keys to inject as environment variables
