--- a/charts/dependency-track/values.yaml
+++ b/charts/dependency-track/values.yaml
@@ -103,7 +103,7 @@ backend:
     # ALPINE_OIDC_USER_PROVISIONING: true
     # ALPINE_OIDC_TEAM_SYNCHRONIZATION: true
     ALPINE_CORS_ENABLED: true
-    ALPINE_CORS_ALLOW_ORIGIN: *
+    ALPINE_CORS_ALLOW_ORIGIN: "*"
     ALPINE_CORS_ALLOW_METHODS: GET, POST, PUT, DELETE, OPTIONS
     ALPINE_CORS_ALLOW_HEADERS: Origin, Content-Type, Authorization, X-Requested-With, Content-Length, Accept, Origin, X-Api-Key, X-Total-Count, *
     ALPINE_CORS_EXPOSE_HEADERS: Origin, Content-Type, Authorization, X-Requested-With, Content-Length, Accept, Origin, X-Api-Key, X-Total-Count
