--- a/charts/dependency-track/templates/deployment-backend.yaml
+++ b/charts/dependency-track/templates/deployment-backend.yaml
@@ -49,7 +49,7 @@ spec:
 {{ toYaml .Values.backend.resources | indent 12 }}
           env:
             {{- /* Environment variables from secrets list */}}
-            {{- range .Values.secretsEnv }}
+            {{- range .Values.backend.secretsEnv }}
             {{- $secretName := .secretName }}
             {{- range $key, $value :=  .env }}
             - name: {{ $key }}
@@ -59,7 +59,7 @@ spec:
                   key: {{ $value }}
             {{- end }}
             {{- end }}
-            {{- range $key, $value :=  .Values.env }}
+            {{- range $key, $value :=  .Values.backend.env }}
             - name: {{ $key }}
               value: {{ $value | quote }}
             {{- end }}
