--- a/charts/dependency-track/values.yaml
+++ b/charts/dependency-track/values.yaml
@@ -2,83 +2,145 @@
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
 
-replicaCount: 1
+frontend:
+  replicaCount: 1
 
-image:
-  repository: owasp/dependency-track
-  tag: 3.8.0
-  pullPolicy: IfNotPresent
+  image:
+    repository: dependencytrack/frontend
+    tag: 4.2.0
+    pullPolicy: IfNotPresent
 
-service:
-  type: ClusterIP
-  port: 80
+  service:
+    type: ClusterIP
+    port: 80
 
-env:
-  ALPINE_DATABASE_MODE: internal
-# Environement variables to satisfy dependency track requirements
-  JAVA_OPTIONS: -XX:ActiveProcessorCount=2 -Xmx4G
-# ALPINE_DATABASE_MODE: external
-# ALPINE_DATABASE_URL: jdbc:postgresql://db-postgres:5432/dtrack"
-# ALPINE_DATABASE_DRIVER: org.postgresql.Driver
-# ALPINE_DATABASE_DRIVER_PATH: /extlib/postgresql-42.2.5.jar
-# ALPINE_DATABASE_POOL_ENABLED: true
-# ALPINE_DATABASE_POOL_MAX_SIZE: 10
-# ALPINE_DATABASE_POOL_IDLE_TIMEOUT: 600000
-# ALPINE_DATABASE_POOL_MAX_LIFETIME: 600000
-# ALPINE_LDAP_ENABLED: "true"
-# ALPINE_LDAP_BASEDN: "DC=your,DC=domain,DC=com"
-# ALPINE_LDAP_SECURITY_AUTH: "simple"
-# ALPINE_LDAP_AUTH_USERNAME_FORMAT: "%s"
-# ALPINE_LDAP_ATTRIBUTE_NAME: "sAMAccountName"
-# ALPINE_LDAP_ATTRIBUTE_MAIL: "mail"
-# ALPINE_LDAP_GROUPS_FILTER: "(&(objectClass=group)(objectCategory=Group))"
-# ALPINE_LDAP_USER_GROUPS_FILTER: "(member:1.2.840.113556.1.4.1941:={USER_DN})"
-# ALPINE_LDAP_USER_PROVISIONING: "true"
-# ALPINE_LDAP_TEAM_SYNCHRONIZATION: "true"
-# ALPINE_HTTP_PROXY_ADDRESS: proxy-server.com
-# ALPINE_HTTP_PROXY_PORT: 8080
+  env:
+    # OIDC_ISSUER:
+    # OIDC_CLIENT_ID:
+    # OIDC_SCOPE:
+    # OIDC_FLOW:
 
-# secretsEnv:
-# This allows to specify a list of secrets/keys to inject as environment variables
-# - secretName: db-dependency-track
-#   env:
-#     ALPINE_DATABASE_USERNAME: username
-#     ALPINE_DATABASE_PASSWORD: password
-# - secretName: ldap-auth
-#   env:
-#     ALPINE_LDAP_SERVER_URL: LDAP_URL
-#     ALPINE_LDAP_BIND_USERNAME: USERNAME
-#      ALPINE_LDAP_BIND_PASSWORD: PASSWORD
-# - secretName: proxy-auth
-#   env:
-#     ALPINE_HTTP_PROXY_USERNAME: username
-#     ALPINE_HTTP_PROXY_PASSWORD: password
+  # secretsEnv:
+  # This allows to specify a list of secrets/keys to inject as environment variables
+  # - secretName: db-dependency-track
+  #   env:
+  #     ALPINE_DATABASE_USERNAME: username
+  #     ALPINE_DATABASE_PASSWORD: password
+  # - secretName: ldap-auth
+  #   env:
+  #     ALPINE_LDAP_SERVER_URL: LDAP_URL
+  #     ALPINE_LDAP_BIND_USERNAME: USERNAME
+  #      ALPINE_LDAP_BIND_PASSWORD: PASSWORD
+  # - secretName: proxy-auth
+  #   env:
+  #     ALPINE_HTTP_PROXY_USERNAME: username
+  #     ALPINE_HTTP_PROXY_PASSWORD: password
 
-ingress:
-  enabled: false
-# enabled: true
-# annotations:
-#    traefik.ingress.kubernetes.io/redirect-entry-point: https
-#    traefik.ingress.kubernetes.io/redirect-permanent: "true"
-# path: /
-# hosts:
-#  - dependency-track.your.domain.com
+  ingress:
+    enabled: false
+  # enabled: true
+  # annotations:
+  #    traefik.ingress.kubernetes.io/redirect-entry-point: https
+  #    traefik.ingress.kubernetes.io/redirect-permanent: "true"
+  # path: /
+  # hosts:
+  #  - dependency-track.your.domain.com
 
-persistence:
-  enabled: false
-  accessMode: ReadWriteOnce
-  size: 512M
-  storageClass: "-"
-  existingClaim: ""
 
-resources: {}
-  # We usually recommend not to specify default resources and to leave this as a conscious
-  # choice for the user. This also increases chances charts run on environments with little
-  # resources, such as Minikube. If you do want to specify resources, uncomment the following
-  # lines, adjust them as necessary, and remove the curly braces after 'resources:'.
-  # limits:
-  #   cpu: 2
-  #   memory: 5120Mi
-  # requests:
-  #   cpu: 2
-  #   memory: 5120Mi
+  resources: {}
+    # We usually recommend not to specify default resources and to leave this as a conscious
+    # choice for the user. This also increases chances charts run on environments with little
+    # resources, such as Minikube. If you do want to specify resources, uncomment the following
+    # lines, adjust them as necessary, and remove the curly braces after 'resources:'.
+    # limits:
+    #   cpu: 1
+    #   memory: 512Mi
+    # requests:
+    #   cpu: 1
+    #   memory: 512Mi
+
+backend:
+  replicaCount: 1
+
+  image:
+    repository: dependencytrack/apiserver
+    tag: 4.2.0
+    pullPolicy: IfNotPresent
+
+  service:
+    type: ClusterIP
+    port: 80
+
+  env:
+    ALPINE_DATABASE_MODE: internal
+    # Environement variables to satisfy dependency track requirements
+    JAVA_OPTIONS: -XX:ActiveProcessorCount=2 -Xmx4G
+    # ALPINE_DATABASE_MODE: external
+    # ALPINE_DATABASE_URL: jdbc:postgresql://db-postgres:5432/dtrack"
+    # ALPINE_DATABASE_DRIVER: org.postgresql.Driver
+    # ALPINE_DATABASE_DRIVER_PATH: /extlib/postgresql-42.2.5.jar
+    # ALPINE_DATABASE_POOL_ENABLED: true
+    # ALPINE_DATABASE_POOL_MAX_SIZE: 10
+    # ALPINE_DATABASE_POOL_IDLE_TIMEOUT: 600000
+    # ALPINE_DATABASE_POOL_MAX_LIFETIME: 600000
+    # ALPINE_LDAP_ENABLED: "true"
+    # ALPINE_LDAP_BASEDN: "DC=your,DC=domain,DC=com"
+    # ALPINE_LDAP_SECURITY_AUTH: "simple"
+    # ALPINE_LDAP_AUTH_USERNAME_FORMAT: "%s"
+    # ALPINE_LDAP_ATTRIBUTE_NAME: "sAMAccountName"
+    # ALPINE_LDAP_ATTRIBUTE_MAIL: "mail"
+    # ALPINE_LDAP_GROUPS_FILTER: "(&(objectClass=group)(objectCategory=Group))"
+    # ALPINE_LDAP_USER_GROUPS_FILTER: "(member:1.2.840.113556.1.4.1941:={USER_DN})"
+    # ALPINE_LDAP_USER_PROVISIONING: "true"
+    # ALPINE_LDAP_TEAM_SYNCHRONIZATION: "true"
+    # ALPINE_HTTP_PROXY_ADDRESS: proxy-server.com
+    # ALPINE_HTTP_PROXY_PORT: 8080
+    # Optional OpenID Connect (OIDC) Properties
+    # ALPINE_OIDC_ENABLED: true
+    # ALPINE_OIDC_ISSUER: https://auth.example.com/auth/realms/example
+    # ALPINE_OIDC_USERNAME_CLAIM: preferred_username
+    # ALPINE_OIDC_TEAMS_CLAIM: groups
+    # ALPINE_OIDC_USER_PROVISIONING: true
+    # ALPINE_OIDC_TEAM_SYNCHRONIZATION: true
+    ALPINE_CORS_ENABLED: true
+    ALPINE_CORS_ALLOW_ORIGIN: "*"
+    ALPINE_CORS_ALLOW_METHODS: GET, POST, PUT, DELETE, OPTIONS
+    ALPINE_CORS_ALLOW_HEADERS: Origin, Content-Type, Authorization, X-Requested-With, Content-Length, Accept, Origin, X-Api-Key, X-Total-Count, *
+    ALPINE_CORS_EXPOSE_HEADERS: Origin, Content-Type, Authorization, X-Requested-With, Content-Length, Accept, Origin, X-Api-Key, X-Total-Count
+    ALPINE_CORS_ALLOW_CREDENTIALS: true
+    ALPINE_CORS_MAX_AGE: 3600
+
+  # secretsEnv:
+  # This allows to specify a list of secrets/keys to inject as environment variables
+  # - secretName: db-dependency-track
+  #   env:
+  #     ALPINE_DATABASE_USERNAME: username
+  #     ALPINE_DATABASE_PASSWORD: password
+  # - secretName: ldap-auth
+  #   env:
+  #     ALPINE_LDAP_SERVER_URL: LDAP_URL
+  #     ALPINE_LDAP_BIND_USERNAME: USERNAME
+  #      ALPINE_LDAP_BIND_PASSWORD: PASSWORD
+  # - secretName: proxy-auth
+  #   env:
+  #     ALPINE_HTTP_PROXY_USERNAME: username
+  #     ALPINE_HTTP_PROXY_PASSWORD: password
+
+  persistence:
+    enabled: false
+    accessMode: ReadWriteOnce
+    size: 512M
+    storageClass: "-"
+    existingClaim: ""
+
+  resources: {}
+    # We usually recommend not to specify default resources and to leave this as a conscious
+    # choice for the user. This also increases chances charts run on environments with little
+    # resources, such as Minikube. If you do want to specify resources, uncomment the following
+    # lines, adjust them as necessary, and remove the curly braces after 'resources:'.
+    # limits:
+    #   cpu: 2
+    #   memory: 5120Mi
+    # requests:
+    #   cpu: 2
+    #   memory: 5120Mi
