Fix selector references in deployment

--- a/charts/dependency-track/templates/deployment-backend.yaml
+++ b/charts/dependency-track/templates/deployment-backend.yaml
@@ -9,11 +9,13 @@ spec:
   selector:
     matchLabels:
       app: {{ template "dependency-track.name" . }}
+      type: backend
       release: {{ .Release.Name }}
   template:
     metadata:
       labels:
         app: {{ include "dependency-track.name" . }}
+        type: backend
         release: {{ .Release.Name }}
     spec:
       volumes:
