--- a/charts/dependency-track/templates/deployment-frontend.yaml
+++ b/charts/dependency-track/templates/deployment-frontend.yaml
@@ -9,6 +9,7 @@ spec:
   selector:
     matchLabels:
       app: {{ template "dependency-track.name" . }}
+      type: frontend
       release: {{ .Release.Name }}
   template:
     metadata:
