--- a/charts/clamapi/requirements.yaml
+++ b/charts/clamapi/requirements.yaml
@@ -1,5 +1,6 @@
+# Create new requirements.lock with "helm dependency build ."
 dependencies:
 - name: clamav
-  version: 1.0.5
-  repository: https://charts.helm.sh/stable
+  version: 1.3.2
+  repository: https://wiremind.github.io/wiremind-helm-charts
   condition: clamav.enabled
