--- a/charts/clamapi/values.yaml
+++ b/charts/clamapi/values.yaml
@@ -6,14 +6,12 @@ replicaCount: 1
 
 image:
   repository: audig/clamapi
-  tag: 2.0.4
+  tag: 2.1.0
   pullPolicy: IfNotPresent
 
 
 clamav:
   enabled: true
-  image:
-    tag: 1.7
   # If clamav enabled false, host & port can be specified to use an external clamav
   # externalHost:
   # externalPort:
@@ -34,7 +32,8 @@ service:
   port: 80
 
 podDisruptionBudget:
-  enabled: true
+  # Makes sense to enable when replicaCount is >= 2
+  enabled: false
   rule:
     type: minAvailable
     value: 1
