--- a/charts/clamapi/values.yaml
+++ b/charts/clamapi/values.yaml
@@ -11,10 +11,11 @@ image:
 
 
 clamav:
+  # Deployment of clamav can be disabled to use an existing clamav, you must adjust host & port to target your clamav instance
   enabled: true
-  # If clamav enabled false, host & port can be specified to use an external clamav
-  # externalHost:
-  # externalPort:
+  fullnameOverride: clamav
+  host: clamav
+  port: 3310
   timeout: 1000
   kubeMeta:
     deploymentApiVersion: apps/v1
