--- a/charts/proxy-relay/templates/deployment.yaml
+++ b/charts/proxy-relay/templates/deployment.yaml
@@ -51,7 +51,8 @@ spec:
               subPath: httpd.conf
             - mountPath: /usr/local/apache2/conf/extra/proxy-html.conf
               name: config
-              subPath: proxy-html.conf
+              subPath: handlers.lua
+            - mountPath: /usr/local/apache2/conf/extra/handlers.lua
           ports:
             - name: http
               containerPort: 80
