fix(proxy-relay): Fix location of lua scripts

--- a/charts/proxy-relay/templates/configmap.yaml
+++ b/charts/proxy-relay/templates/configmap.yaml
@@ -196,7 +196,7 @@ data:
     {{- end}}
 
     {{- range .lua }}
-      {{ .directive }} handlers.lua {{ .functionName }} {{ .parameters }}
+      {{ .directive }} /usr/local/apache2/conf/extra/handlers.lua {{ .functionName }} {{ .parameters }}
     {{- end}}
 
       ProxyPass / {{ .remoteUrl }}
