--- a/charts/default-chart/values.yaml
+++ b/charts/default-chart/values.yaml
@@ -6,7 +6,9 @@ replicaCount: 1
 
 image:
   repository: nginx
+  version: 1.16.0
   pullPolicy: IfNotPresent
+
 
 imagePullSecrets: []
 nameOverride: ""
