--- a/charts/passbolt/Chart.yaml
+++ b/charts/passbolt/Chart.yaml
@@ -1,8 +1,8 @@
 apiVersion: v2
 name: passbolt
 type: application
-version: 1.0.4
-appVersion: "2.13.5-debian"
+version: 1.1.0
+appVersion: "3.4.0-ce-non-root"
 description: A Helm chart to deploy Passbolt
 home: http://passbolt.com
 sources:
