Use latest docker image version
fix #66 the castlemock's maintainers remove old images

--- a/charts/castlemock/Chart.yaml
+++ b/charts/castlemock/Chart.yaml
@@ -3,7 +3,7 @@ name: castlemock
 description: Castlemock webapp chart
 type: application
 version: 0.1.5
-appVersion: 1.49
+appVersion: latest
 home: https://github.com/castlemock/castlemock
 sources:
   - https://github.com/cnieg/helm-charts/tree/master/charts/castlemock
