--- a/charts/passbolt/templates/ingress.yaml
+++ b/charts/passbolt/templates/ingress.yaml
@@ -1,8 +1,11 @@
 {{- if .Values.ingress.enabled -}}
 {{- $fullName := include "passbolt.fullname" . -}}
 {{- $svcPort := .Values.service.port -}}
-{{- if semverCompare ">=1.14-0" .Capabilities.KubeVersion.GitVersion -}}
+{{- $kubeVer := .Capabilities.KubeVersion.GitVersion -}}
+{{- if semverCompare ">=1.19" $kubeVer -}}
 apiVersion: networking.k8s.io/v1
+{{- else if semverCompare ">=1.14-0" $kubeVer -}}
+apiVersion: networking.k8s.io/v1beta1
 {{- else -}}
 apiVersion: extensions/v1beta1
 {{- end }}
@@ -26,7 +29,9 @@ spec:
       secretName: {{ .secretName }}
     {{- end }}
   {{- end }}
+  {{- if .Values.ingress.className }}
   ingressClassName: {{ .Values.ingress.className }}
+  {{- end }}
   rules:
     {{- range .Values.ingress.hosts }}
     - host: {{ .host | quote }}
@@ -34,12 +39,17 @@ spec:
         paths:
           {{- range .paths }}
           - path: {{ .path }}
-            pathType: Prefix
             backend:
+            {{- if semverCompare ">=1.19" $kubeVer }}
               service:
                 name: {{ $fullName }}
                 port:
                   number: {{ $svcPort }}
+            pathType: Prefix
+            {{- else }}
+              serviceName: {{ $fullName }}
+              servicePort: {{ $svcPort }}
+            {{- end }}
           {{- end }}
     {{- end }}
   {{- end }}
