--- a/charts/castlemock/templates/ingress.yaml
+++ b/charts/castlemock/templates/ingress.yaml
@@ -29,7 +29,8 @@ spec:
         paths:
           - path: /
             backend:
-              serviceName: {{ $fullName }}
-              servicePort: {{ $svcPort }}
+              service:
+                name: {{ $fullName }}
+                port: {{ $svcPort }}
   {{- end }}
   {{- end }}
