--- a/renovate.json
+++ b/renovate.json
@@ -1,6 +1,4 @@
 {
-  "extends": [
-    "config:base"
-  ],
+  "$schema": "https://docs.renovatebot.com/renovate-schema.json",
   "bumpVersion": "patch"
 }
