--- a/charts/default-chart/templates/ingress.yaml
+++ b/charts/default-chart/templates/ingress.yaml
@@ -1,7 +1,14 @@
 {{- if .Values.ingress.enabled -}}
 {{- $fullName := include "default-chart.fullname" . -}}
 {{- $svcPort := .Values.service.port -}}
+{{- $kubeVer := .Capabilities.KubeVersion.GitVersion -}}
+{{- if semverCompare ">=1.19" $kubeVer -}}
+apiVersion: networking.k8s.io/v1
+{{- else if semverCompare ">=1.14-0" $kubeVer -}}
+apiVersion: networking.k8s.io/v1beta1
+{{- else -}}
 apiVersion: extensions/v1beta1
+{{- end }}
 kind: Ingress
 metadata:
   name: {{ $fullName }}
