--- a/charts/proxy-relay/templates/ingress.yaml
+++ b/charts/proxy-relay/templates/ingress.yaml
@@ -1,26 +1,33 @@
 {{- if .Values.ingress.enabled -}}
 {{- $fullName := include "proxy-relay.fullname" . -}}
+{{- $kubeVer := .Capabilities.KubeVersion.GitVersion -}}
+{{- if semverCompare ">=1.19" $kubeVer -}}
+apiVersion: networking.k8s.io/v1
+{{- else if semverCompare ">=1.14-0" $kubeVer -}}
+apiVersion: networking.k8s.io/v1beta1
+{{- else -}}
 apiVersion: extensions/v1beta1
+{{- end }}
 kind: Ingress
 metadata:
   name: {{ $fullName }}
   labels:
-{{ include "proxy-relay.labels" . | indent 4 }}
+    {{- include "proxy-relay.labels" . | nindent 4 }}
   {{- with .Values.ingress.annotations }}
   annotations:
-{{- toYaml . | nindent 4 }}
+    {{- toYaml . | nindent 4 }}
   {{- end }}
 spec:
-  {{- if .Values.ingress.tls }}
+{{- if .Values.ingress.tls }}
   tls:
-    {{- range .Values.ingress.tls }}
+  {{- range .Values.ingress.tls }}
     - hosts:
-        {{- range .hosts }}
+      {{- range .hosts }}
         - {{ . | quote }}
       {{- end }}
       secretName: {{ .secretName }}
   {{- end }}
-  {{- end }}
+{{- end }}
   rules:
     {{- range .Values.ingress.hosts }}
     - host: {{ .host | quote }}
@@ -29,8 +36,16 @@ spec:
           {{- range .paths }}
           - path: {{ . }}
             backend:
+            {{- if semverCompare ">=1.19" $kubeVer }}
+              service:
+                name: {{ $fullName }}
+                port:
+                  number: http
+            pathType: Prefix
+            {{- else }}
               serviceName: {{ $fullName }}
               servicePort: http
-  {{- end }}
-  {{- end }}
-  {{- end }}
+            {{- end }}
+          {{- end }}
+    {{- end }}
+{{- end }}
