fix: renovate ingress

--- a/charts/proxy-relay/templates/ingress.yaml
+++ b/charts/proxy-relay/templates/ingress.yaml
@@ -40,7 +40,7 @@ spec:
               service:
                 name: {{ $fullName }}
                 port:
-                  number: http
+                  name: http
             pathType: Prefix
             {{- else }}
               serviceName: {{ $fullName }}
