--- a/charts/castlemock/templates/ingress.yaml
+++ b/charts/castlemock/templates/ingress.yaml
@@ -28,9 +28,11 @@ spec:
       http:
         paths:
           - path: /
+            pathType: Prefix
             backend:
               service:
                 name: {{ $fullName }}
-                port: {{ $svcPort }}
+                port:
+                  name: {{ $svcPort }}
   {{- end }}
   {{- end }}
