--- a/charts/castlemock/templates/ingress.yaml
+++ b/charts/castlemock/templates/ingress.yaml
@@ -1,6 +1,5 @@
 {{- if .Values.ingress.enabled -}}
   {{- $fullName := include "castlemock.fullname" . -}}
-  {{- $svcPort := .Values.service.port -}}
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
@@ -33,6 +32,6 @@ spec:
               service:
                 name: {{ $fullName }}
                 port:
-                  name: {{ $svcPort }}
+                  name: http
   {{- end }}
   {{- end }}
