--- a/charts/clamapi/templates/ingress.yaml
+++ b/charts/clamapi/templates/ingress.yaml
@@ -1,6 +1,6 @@
 {{- if .Values.ingress.enabled -}}
 {{- $fullName := include "clamapi.fullname" . -}}
-apiVersion: extensions/v1beta1
+apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: {{ $fullName }}
@@ -28,9 +28,12 @@ spec:
         paths:
         {{- range .paths }}
           - path: {{ . }}
-            backend:
-              serviceName: {{ $fullName }}
-              servicePort: http
+            pathType: Prefix
+              backend:
+                service:
+                  name: {{ $fullName }}
+                  port:
+                    name: http
         {{- end }}
   {{- end }}
 {{- end }}
